[metadata]
name = topicsimilaritymodel_gravityai_KMANNINEN
version = 0.0.1
author = Kurt Manninen
author_email = kurt@cranksetanalytics.com
description = Library to connect to the Topic Similarity Model on Gravity AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kmanninen/topicsimilaritymodel-gravityai
project_urls =
    Bug Tracker = https://github.com/kmanninen/topicsimilaritymodel-gravityai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src